[YYB][APP] Send 20 bytes 0 instead of blank.
Symptom:
Project: YYB.
Note: N/A

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/dictionaries/*.xml
-/.idea/libraries
-.DS_Store
-/build
-/key*
+# app
+./.idea/*
+./.idea/*.xml
